# new_place

backend/: Cargo.toml
backend/graphql/mutations/: resignation.gql
backend/graphql/queries/: latest_resignation.gql  resignation.gql  vacation_start_date.gql
backend/migrations/: 20250323092723_resignation.sql  20250323092723_resigned_employee.sql
backend/src/: clients.rs  date.rs  graphql.rs  lib.rs  main.rs  models.rs  mutation.rs  query.rs  resignation.rs
backend/src/clients/: holidays.rs
backend/src/consts/: url.rs
backend/src/fixtures/: resignations.sql
backend/src/fixtures/resignation/: resignations.sql
backend/src/graphql/: mod.rs  mutation.rs  mutations.rs  queries.rs  query.rs
backend/src/graphql/mutations/: post_resignation.rs  root.rs
backend/src/graphql/objects/: resignation.rs
backend/src/graphql/queries/: latest_resignation.rs  root.rs  vacation_start_date.rs
backend/src/graphql/queries/fixtures/: vacation_start_date_200_data.sql
backend/src/graphql/scalars/: date.rs  datetime.rs  mod.rs
backend/src/infrastructure/: app.rs  database.rs
backend/src/models/: resignation.rs
backend/src/scalars/: date.rs  datetime.rs
backend/src/tests/mocks/: server.rs
backend/src/tests/utils/: client.rs
backend/src/utils/: time.rs  url.rs
backend/src/validations/: date.rs
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml
frontend/src/: app.tsx  index.tsx  main.tsx
frontend/src/routes/: __root.tsx  create.tsx  index.tsx
