[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
async-graphql = "7.0.16"
async-graphql-axum = "7.0.16"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "mysql", "chrono"] }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
hyper-util = { version = "0.1.10", features = ["client-legacy"] }
http-body-util = "0.1.3"
graphql-parser = "0.4.1"
tower-http = { version = "0.6.2", features = ["cors"] }
